--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,33 @@
-Thumbs.db*
+# Игнорировать системные файлы macOS
 .DS_Store
-HELP.md
+
+# Игнорировать файлы и папки IntelliJ IDEA
+.idea/
+*.iml
+
+# Игнорировать папки сборки
+build/
+out/
+
 .gradle
 build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-### STS ###
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Eclipse ###
 .apt_generated
 .classpath
 .factorypath
@@ -12,13 +35,9 @@ build/
 .settings
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
 ### NetBeans ###
 /nbproject/private/
@@ -30,16 +49,5 @@ out/
 ### VS Code ###
 .vscode/
 
-### Package Files ###
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-### Exclusions ###
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+### Mac OS ###
+.DS_Store
